[project]
name = "kvo-devtools"
description = "Tools for my personal development environment"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "fabric>=3.2.2",
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "invoke>=2.2.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "tzlocal>=5.3.1",
]

[project.optional-dependencies]
linting = [
    "ruff>=0.11.12",
]
testing = [
    "pytest>=8.3.5",
]
typing = [
    "mypy>=1.16.0",
]

[project.entry-points.kvo-devtools-dependencies-installer]
python-uv = "kvo.devtools.packagedependencies:UVPythonPackageDependenciesInstaller"
nodejs = "kvo.devtools.packagedependencies:NodeJsPackageDependenciesInstaller"

[project.entry-points.kvo-devtools-package-version]
python-uv = "kvo.devtools.packageversion:PythonPackageVersion"
nodejs = "kvo.devtools.packageversion:NodeJsPackageVersion"

[project.entry-points.kvo-devtools-clean-package]
python-uv = "kvo.devtools.cleanpackage:UvPythonCleanPackage"
nodejs = "kvo.devtools.cleanpackage:NodeJsCleanPackage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kvo"]

[tool.hatch.version]
path = "src/kvo/devtools/__init__.py"

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "mypy>=1.16.0",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.flake8]
ignore = ["E501"]

[tool.ruff]
ignore = ["E501"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "S", "B", "SIM", "PIE", "RUF", "PL", "UP", "N"]
ignore = ["I001", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/kvo/devtools/cleanpackage.py" = ["S404"]
"src/kvo/devtools/packagedependencies.py" = ["S404"]
"src/kvo/devtools/publisher.py" = ["S404"]
"src/kvo/devtools/packageversion.py" = ["S404"]

[tool.mypy]
disable_error_code = ["var-annotated"]
plugins = [
    "pydantic.mypy",
]
